--- a/app/views/codes/index.html.erb
+++ b/app/views/codes/index.html.erb
@@ -17,7 +17,7 @@
     <% @codes.each do |code| %>
       <tr>
         <td><%= code.title %></td>
-        <td><%= code.type %></td>
+        <td><%= code.code_lang %></td>
         <td><%= code.body %></td>
         <td><%= code.category_id %></td>
         <td><%= link_to 'Show', code %></td>
