--- a/app/views/codes/show.html.erb
+++ b/app/views/codes/show.html.erb
@@ -1,24 +1,19 @@
-<p id="notice"><%= notice %></p>
+<strong>Title:</strong>
+<%= @code.title %>
+<strong>Type:</strong>
+<%= @code.code_lang %>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+        <%= text_area :code, :code, id: "code_id" %>
+    </div>
+    <div class="col-6">
+      <iframe title="result" className="iframe" ref="iframe" />
+    </div>
+  </div>
+</div>
+<div class="container">
+  <%= link_to 'Edit', edit_code_path(@code) %> |
+  <%= link_to 'Back', codes_path %>
+</div>
 
-<p>
-  <strong>Title:</strong>
-  <%= @code.title %>
-</p>
-
-<p>
-  <strong>Type:</strong>
-  <%= @code.code_lang %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @code.body %>
-</p>
-
-<p>
-  <strong>Category:</strong>
-  <%= @code.category_id %>
-</p>
-
-<%= link_to 'Edit', edit_code_path(@code) %> |
-<%= link_to 'Back', codes_path %>
