--- a/app/views/codes/index.html.erb
+++ b/app/views/codes/index.html.erb
@@ -18,7 +18,7 @@
       <tr>
         <td><%= code.title %></td>
         <td><%= code.code_lang %></td>
-        <td><%= code.body %></td>
+        <td><%= code.code %></td>
         <td><%= code.category_id %></td>
         <td><%= link_to 'Show', code %></td>
         <td><%= link_to 'Edit', edit_code_path(code) %></td>
