--- a/app/views/codes/show.html.erb
+++ b/app/views/codes/show.html.erb
@@ -8,7 +8,7 @@
         <%= text_area :code, :code, id: "code_id" %>
     </div>
     <div class="col-6">
-      <iframe title="result" className="iframe" ref="iframe" />
+      <iframe title="result" className="iframe" id="iframe"></iframe>
     </div>
   </div>
 </div>
@@ -16,4 +16,13 @@
   <%= link_to 'Edit', edit_code_path(@code) %> |
   <%= link_to 'Back', codes_path %>
 </div>
+
+<% content_for :javascript do %>
+  <script type="text/javascript">
+    console.log("Loaded...");
+    alert('Some page-specific JS');
+  </script>
+<% end %>
+
+
 
